[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Resources/BottomMenu/BottomMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/TURN_v4.gd" type="Script" id=2]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Background.gd" type="Script" id=3]
[ext_resource path="res://Scenes/FIGHTMODE/B_Fightmode/Obstacles.gd" type="Script" id=4]
[ext_resource path="res://Assets/TSCN/Mouse/Mouse_Cursor.tscn" type="PackedScene" id=5]

[node name="Battlefield" type="Node2D"]

[node name="UI" type="Control" parent="."]

[node name="Battlefield_Limits" type="MarginContainer" parent="UI"]
margin_left = 288.0
margin_top = 64.0
margin_right = 1312.0
margin_bottom = 704.0

[node name="BottomMenu" parent="UI" instance=ExtResource( 1 )]
position = Vector2( 0, 768 )
z_index = 40

[node name="Turn" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Background" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Obstacles" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Mouse_Cursor" parent="." instance=ExtResource( 5 )]
position = Vector2( 640, 256 )
z_index = 50

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
